exports[`ControlMobileDropdown > react > renders correctly by default #0`] = `
<button
  type="button"
  class="block ml-24 mr-0 px-0 py-16 hover:text-gui-hover focus:text-gui-focus focus:outline-none"
  data-id="meganav-control-mobile-dropdown"
  aria-expanded="false"
  aria-controls="meganav-mobile-dropdown"
>
  <svg
    class="text-cool-black transition-colors"
    data-id="meganav-control-mobile-dropdown-menu"
    style="width: 1.5rem; height: 1.5rem;"
  >
    <use xlink:href="#sprite-icon-gui-burger-menu"></use></svg
  ><svg
    class="text-cool-black transition-colors hidden"
    data-id="meganav-control-mobile-dropdown-close"
    style="width: 1.5rem; height: 1.5rem;"
  >
    <use xlink:href="#sprite-icon-gui-close"></use>
  </svg>
</button>
`;

exports[`ControlMobileDropdown > react > renders correctly on click #0`] = `
<button
  type="button"
  class="block ml-24 mr-0 px-0 py-16 hover:text-gui-hover focus:text-gui-focus focus:outline-none"
  data-id="meganav-control-mobile-dropdown"
  aria-expanded="true"
  aria-controls="meganav-mobile-dropdown"
>
  <svg
    class="text-cool-black transition-colors hidden"
    data-id="meganav-control-mobile-dropdown-menu"
    style="width: 1.5rem; height: 1.5rem;"
  >
    <use xlink:href="#sprite-icon-gui-burger-menu"></use></svg
  ><svg
    class="text-cool-black transition-colors"
    data-id="meganav-control-mobile-dropdown-close"
    style="width: 1.5rem; height: 1.5rem;"
  >
    <use xlink:href="#sprite-icon-gui-close"></use>
  </svg>
</button>
`;

exports[`ControlMobileDropdown > vw > renders correctly by default #0`] = `
<button
  name="button"
  type="button"
  class="block ml-24 mr-0 px-0 py-16 hover:text-gui-hover focus:text-gui-focus focus:outline-none"
  data-id="meganav-control-mobile-dropdown"
  aria-expanded="false"
  aria-controls="meganav-mobile-dropdown"
>
  <svg
    class="text-cool-black transition-colors"
    style="width: 1.5rem; height: 1.5rem"
    data-id="meganav-control-mobile-dropdown-menu"
  >
    <use xlink:href="#sprite-icon-gui-burger-menu"></use>
  </svg>
  <svg
    class="text-cool-black transition-colors hidden"
    style="width: 1.5rem; height: 1.5rem"
    data-id="meganav-control-mobile-dropdown-close"
  >
    <use xlink:href="#sprite-icon-gui-close"></use>
  </svg>
</button>
`;

exports[`ControlMobileDropdown > vw > renders correctly on click #0`] = `
<button
  name="button"
  type="button"
  class="block ml-24 mr-0 px-0 py-16 hover:text-gui-hover focus:text-gui-focus focus:outline-none"
  data-id="meganav-control-mobile-dropdown"
  aria-expanded="true"
  aria-controls="meganav-mobile-dropdown"
>
  <svg
    class="text-cool-black transition-colors hidden"
    style="width: 1.5rem; height: 1.5rem"
    data-id="meganav-control-mobile-dropdown-menu"
  >
    <use xlink:href="#sprite-icon-gui-burger-menu"></use>
  </svg>
  <svg
    class="text-cool-black transition-colors"
    style="width: 1.5rem; height: 1.5rem"
    data-id="meganav-control-mobile-dropdown-close"
  >
    <use xlink:href="#sprite-icon-gui-close"></use>
  </svg>
</button>
`;

exports[`Notice > react > renders correctly by default #0`] = `
<div
  class="ui-announcement bg-gradient-active-orange text-white"
  data-id="ui-notice"
  style="display: none;"
>
  <div class="ui-grid-px py-16 max-w-screen-xl mx-auto flex items-start">
    <a href="/" class="w-full pr-8 ui-text-p3 self-center"
      ><strong class="font-bold whitespace-nowrap pr-4"
        >Something something</strong
      ><span class="pr-4"
        >Lorem ipsum dolor sit amet, in nonumes delectus nominati eam, novum
        recusabo an mel. Aeque maiorum patrioque te per, congue epicurei
        qualisque at quo. An has quis ludus appellantur. Id vis solum assentior
        theophrastus</span
      ><span class="underline cursor-pointer whitespace-nowrap"
        >CLICK ME</span
      ></a
    ><button
      type="button"
      class="ml-auto h-20 w-20 border-none bg-none self-baseline"
    >
      <svg class="text-cool-black " style="width: 1.25rem; height: 1.25rem;">
        <use xlink:href="#sprite-icon-gui-close"></use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Notice > vw > renders correctly by default #0`] = `
<div
  class="ui-announcement bg-gradient-active-orange text-white"
  data-id="ui-notice"
  style="display: none;"
>
  <div class="ui-grid-px py-16 max-w-screen-xl mx-auto flex items-start">
    <a class="w-full pr-8 ui-text-p3 self-center" href="/">
      <strong class="font-bold whitespace-nowrap pr-4"
        >Something something</strong
      >
      <span class="pr-4"
        >Lorem ipsum dolor sit amet, in nonumes delectus nominati eam, novum
        recusabo an mel. Aeque maiorum patrioque te per, congue epicurei
        qualisque at quo. An has quis ludus appellantur. Id vis solum assentior
        theophrastus</span
      >
      <span class="underline cursor-pointer whitespace-nowrap">CLICK ME</span>
    </a>
    <button
      name="button"
      type="button"
      class="h-20 w-20 mt-4 ml-auto border-none bg-none self-baseline"
    >
      <svg class="text-cool-black " style="width: 1.25rem; height: 1.25rem">
        <use xlink:href="#sprite-icon-gui-close"></use>
      </svg>
    </button>
  </div>
</div>
`;
